                and _rcsb_entity_host_organism.taxonomy_lineage_id, _rcsb_entity_host_organism.taxonomy_lineage_name,
                _rcsb_entity_host_organism.taxonomy_lineage_depth

                New sub-category rcsb_ec_lineage with items _entity.rcsb_ec_lineage_name _entity.rcsb_ec_lineage_id
                and _entity.rcsb_ec_lineage_depth

                Add_rcsb_schema_container_identifiers.schema_name, _rcsb_schema_container_identifiers.collection_name
                _rcsb_schema_container_identifiers.collection_schema_version

               Configuration changes to simplify the handling of versioning removing these from database and collection names
               and schema file names, version configuration now managed in separate configuration options,
               NCBI_TAXONOMY_LOCATOR removed, added configuration options NCBI_TAXONOMY_PATH and ENZYME_CLASSIFICATION_DATA_PATH,
               provide separate configuration options schema version assignment within collections,
               up-version api and json schema, add config option VRPT_REPO_PATH_ENV.

               chem_comp category attributes normalized between chem_comp_core and bird_chem_comp_core collections.
 17-Mar-2019   V0.48 adding subcategory aggregate rcsb_macromolecular_names_combined
 24-Mar-2019   V0.49 address missing category issues in chemical reference data collections, various changes to
               address schema validation exceptions introduced by additionalProperties: False.  Add consolidated
               EC item.   Extend taxonomy lineaage to include leaf node.
 24-Mar-2019   V0.50 temporary adjustment for error handing for obsolete taxonony ids.
 25-Mar-2019   V0.51 remap merged taxons and adjust exception handling for taxonomy lineage generation