@@ -5,7 +5,7 @@
 # -----------------
 #
 [tox]
-envlist = flake8, py{37}-{linux,macos}, coverage-macos
+envlist = flake8, py{37,27}-{linux,macos}, coverage-macos
 #envlist = flake8, py{37,27}-{linux,macos}, coverage-macos
 
 #
